fixing a bug on mobile

--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,6 +1,6 @@
 .container2 {
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
   /* background-color: #ffffff; */
   display: flex;
   justify-content: center;
