--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   /* background-color: #f5f5f5; */
   /* background: rgb(237, 237, 237);
   background: linear-gradient(
@@ -19,7 +19,7 @@
   content: ' ';
   position: fixed;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   top: 0;
   left: 0;
   background-color: white;
